--- a/workingUi/templates/dashboard.html
+++ b/workingUi/templates/dashboard.html
@@ -18,20 +18,20 @@
             <a class="navbar-brand" href="/">Welcome</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
+                    <a class="nav-link" href="/dashboard">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Transactions</a>
+                    <a class="nav-link" href="/transaction_history">Transactions</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Budget Breakdown</a>
+                    <a class="nav-link" href="/budget_breakdown">Budget Breakdown</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Spending by Category</a>
+                    <a class="nav-link" href="/spending_by_category">Spending by Category</a>
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav>    
 
     <div class="container">
         <div class="row mt-5">
