added picture to login screen

--- a/workingUi/templates/login.html
+++ b/workingUi/templates/login.html
@@ -7,7 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
+            background-image: url('https://images.ctfassets.net/rxqefefl3t5b/60XKsnFDTlF0j0qi4S1Agq/dd79c9f9019ab53fa12018f4c2546106/Woman-on-beach.jpg?fl=progressive&q=80');
+            background-size: cover;
+            background-position: center;
             display: flex;
             justify-content: center;
             align-items: center;
