--- a/workingUi/templates/dashboard.html
+++ b/workingUi/templates/dashboard.html
@@ -38,6 +38,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">User ID: 12345</a></li>
                         <li><a class="dropdown-item" href="#">Email: user@example.com</a></li>
+                        <li><a class="dropdown-item" href="/login">Logout</a></li>
                     </ul>
                 </li>
             </ul>
