--- a/workingUi/templates/pichart.html
+++ b/workingUi/templates/pichart.html
@@ -24,25 +24,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="/">Welcome</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('dashboard') }}">Menu</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('transaction_history') }}">Transactions</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('budget_breakdown') }}">Budget Breakdown</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('spending_by_category') }}">Spending by Category</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% include 'navbar.html' %}
 
     <div class="main-content">
         <div class="chart-container">
@@ -72,5 +54,7 @@
             }
         });
     </script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
