--- a/workingUi/templates/navbar.html
+++ b/workingUi/templates/navbar.html
@@ -21,6 +21,8 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="nav-link" href="{{ url_for('profile') }}">User Profile</a>
                     <li><hr class="dropdown-divider"></li>
+                    <a class="nav-link" href="{{ url_for('profile') }}">Export User Data</a>
+                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                 </ul>
             </li>
